--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "socket.io-client": "^4.8.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
